Fixed broken layout on text input for newsletter form.

--- a/src/documents_en/css/_page_index.scss
+++ b/src/documents_en/css/_page_index.scss
@@ -145,10 +145,12 @@ body#home {
         color: #333;
         font-weight: 400;
         width: 325px;
-        line-height: 36px;
+        padding: 11px 8px 9px 8px;
+        line-height: 1;
+        height: 36px;
         border: none;
         border-radius: 2px;
-        padding: 0 8px;
+        @include box-sizing(border-box);
       }
 
       input[type=submit] {
@@ -459,7 +461,7 @@ body#home {
 
     div#keyvisual > div.keyvisual-content > div.newsletter {
       input[type=text] {
-        width: 200px;
+        width: 220px;
       }
     }
 
